tests/positive/SignatureWithBody.juvix
module SignatureWithBody;

import Stdlib.Prelude open;

isNull :
  {A : Type} → List A → Bool :=
    λ {
      | nil := true
      | _ := false
    };

isNull' :
  {A : Type} → List A → Bool :=
    let
      aux :
        {A : Type} → List A → Bool :=
          λ {
            | nil := true
            | _ := false
          };
    in aux;
