tests/negative/LetMissingClause.juvix
module LetMissingClause;

id : {A : Type} → A → A
  | {A} :=
    let
      id' : A → A;
    in id';
